# TimeBill2

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  plan.md  tsconfig.base.json
.reasonix/: desktop-topic-auto-title-meta.json  desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: idle.rs  lib.rs  macos.rs  main.rs  tray.rs
apps/web/: package.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/web/src/: app.css  app.d.ts  app.html
apps/web/src/lib/: api.ts  auth.svelte.ts  csv.ts  env.ts  harvest.ts  idle.svelte.ts  pb.ts  pdf.ts  realtime.svelte.ts  sidebar.svelte.ts  timer.svelte.ts  toggl.ts  workspace.svelte.ts
apps/web/src/lib/components/: AppShell.svelte  DayGantt.svelte  IdleReturnModal.svelte  LandingPage.svelte  TimeEntryEditor.svelte  TimeTracker.svelte
apps/web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
apps/web/src/routes/clients/: +page.svelte
apps/web/src/routes/dashboard/: +page.svelte
apps/web/src/routes/expenses/: +layout.svelte  (+1 more)
apps/web/static/: manifest.json
pocketbase/pb_hooks/: cron.pb.js  email.pb.js  invoice.pb.js  mileage.pb.js  timer.pb.js  workspace.pb.js
pocketbase/pb_migrations/: 1700000000_init.js  1700000002_relax_invoice_fields.js  1700000003_billing_rounding.js  1700000004_workspace_email_fields.js
scripts/: bump-version.sh
(+18 files in other folders)
