[package]
name = "timebill"
version = "0.0.1"
description = "TimeBill desktop app"
authors = ["Ryan Hoshor <ryan@hoshor.me>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "timebill_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Cross-platform "how long since the user last touched the input devices?"
# (macOS uses IOKit under the hood). Used by the idle watcher thread.
user-idle = "0.6"
